[tool.poetry]
name = "sectigo-certificate-script-manager"
version = "0.1.0"
description = "Dependencies required for SCSM."
authors = ["Kaidoh"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pendulum = "^3.0.0"
yaspin = "^3.0.1"
python-dotenv = "^1.0.1"
fabric = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
